<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeTabBackground"
    tools:context=".fragment.OneFragment">

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/lineColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <RadioGroup
            android:id="@+id/homeRadioGrup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/individualTab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_tab_button"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/individualTab"
                android:textColor="@drawable/home_tab_text_color"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/corporateTab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_tab_button"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/corporateTab"
                android:textColor="@drawable/home_tab_text_color"
                android:textSize="20dp" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lineColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridView
                android:id="@+id/grid"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@color/windowBackground"
                android:columnWidth="100dp"
                android:gravity="center"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/scrollLinear"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:background="@color/homeTabBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grid">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personalInfo"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seeAllPersonalInfo"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:layout_gravity="center"
                    android:layout_marginStart="100dp"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/nav_item_detail_icon"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

            <GridView
                android:id="@+id/grid1"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@color/windowBackground"
                android:columnWidth="100dp"
                android:gravity="center"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollLinear" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>